--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -46,6 +46,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.2.1.505.0\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.2.1.505.0\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -101,6 +110,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mvc3, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Mvc3.1.2\lib\net40\Unity.Mvc3.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -222,6 +234,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="DataRepository\AutofacManager\AutofacContainerModule.cs" />
     <Compile Include="DataRepository\BaseProvider\IRepository.cs" />
     <Compile Include="DataRepository\BaseProvider\RepositoryBase.cs" />
@@ -229,14 +242,18 @@
     <Compile Include="DataRepository\Dapper\SqlDapper.cs" />
     <Compile Include="DataRepository\DBManager\DBServerProvider.cs" />
     <Compile Include="DataRepository\EFDbContext\WinMacDbContext.cs" />
+    <Compile Include="DataRepository\Repositories\UnitOfWorkRepository.cs" />
+    <Compile Include="DataRepository\Repositories\Unit\SrtRepository.cs" />
     <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Resources\Messages.Designer.cs" />
     <Compile Include="Utility\Attributes\Check\MaxLengthExAttribute.cs" />
     <Compile Include="Models\LoginUser.cs" />
+    <Compile Include="Utility\EntityFramework\Query\IIncludableQueryable.cs" />
     <Compile Include="Utility\Enums\CompareType.cs" />
+    <Compile Include="Utility\Extensions\Caching\Memory.cs" />
+    <Compile Include="Utility\Extensions\DatabaseExtensions.cs" />
     <Compile Include="Utility\Extensions\DbSetExtensions.cs" />
     <Compile Include="Utility\Optimization\EntityFramework\DatabaseExtensions.cs" />
-    <Compile Include="Utility\System\EntityFramework\Query.cs" />
     <Compile Include="DataRepository\IRepositories\IUnitOfWork.cs" />
     <Compile Include="DataRepository\IRepositories\Unit\ISrtRepository.cs" />
     <Compile Include="Controllers\BaseVueController.cs" />
@@ -268,14 +285,13 @@
     <Compile Include="Utility\Extensions\ObjectExtension.cs" />
     <Compile Include="Utility\Extensions\ServiceProviderManagerExtension.cs" />
     <Compile Include="Utility\Extensions\StringExtension.cs" />
-    <Compile Include="Utility\System\Extensions\Caching\Memory.cs" />
-    <Compile Include="Utility\System\Security\Claims.cs" />
     <Compile Include="Utility\SystemModels\BaseEntity.cs" />
     <Compile Include="Utility\DomainModels\SysInfo.cs" />
+    <Compile Include="Utility\Security\Claims\PrincipalExtensions.cs" />
     <Compile Include="Utility\TableModels\F140_ログイン認証ファイル.cs" />
     <Compile Include="Utility\TableModels\M003_社員マスタ.cs" />
     <Compile Include="Utility\TableModels\M015_業者ユーザマスタ.cs" />
-    <Compile Include="Utility\TableModels\SrtModel.cs" />
+    <Compile Include="Utility\TableModels\Srt.cs" />
     <Compile Include="Models\NoteModels - Copy.cs" />
     <Compile Include="Models\ResponseMsg.cs" />
     <Compile Include="Models\UploadModels.cs" />
@@ -381,6 +397,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\sammy-0.7.5.js" />
     <Content Include="Scripts\sammy-0.7.5.min.js" />
+    <Content Include="Unity.Mvc3.README.txt" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\_Home.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
