--- a/Windows-MacOs/Windows-MacOs/packages.config
+++ b/Windows-MacOs/Windows-MacOs/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net48" />
   <package id="Dapper" version="2.1.4" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
@@ -37,5 +38,7 @@
   <package id="NLog" version="5.2.4" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net48" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net48" />
+  <package id="Unity.Mvc3" version="1.2" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
