--- a/Windows-MacOs/Vue/static/webconfig.json
+++ b/Windows-MacOs/Vue/static/webconfig.json
@@ -13,6 +13,6 @@
     "subsite_development": "/",
     "subsite_debug": "/",
     "subsite_production": "/",
-    "spa_folder": "/Reafs_W/"
+    "spa_folder": "/Reafs_R_Web/"
 
 }
