--- a/Windows-MacOs/Windows-MacOs/Web.config
+++ b/Windows-MacOs/Windows-MacOs/Web.config
@@ -31,6 +31,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" maxRequestLength="52428800" />
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+        <error statusCode="404" redirect="~/Error/NotFound"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
@@ -42,6 +45,18 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpErrors errorMode="Custom" existingResponse="Replace" >
+      <remove statusCode="404" />
+      <remove statusCode="500" />
+      <error
+        statusCode="404"
+        path="/Error/NotFound"
+        responseMode="ExecuteURL" />
+      <error
+        statusCode="500"
+        path="/Error/Index"
+        responseMode="ExecuteURL" />
+    </httpErrors>
     <staticContent>
       <mimeMap fileExtension=".apk" mimeType="application/octet-stream" />
     </staticContent>
