--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -237,6 +237,9 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\Reafs_R_WebController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\Reafs_T\Common\CommonController.cs" />
+    <Compile Include="Controllers\Reafs_T\Common\Partial\CommonController.cs" />
+    <Compile Include="Controllers\Reafs_T\Partial\Reafs_TController.cs" />
     <Compile Include="Controllers\Reafs_WController.cs" />
     <Compile Include="DataRepository\AutofacManager\AutofacContainerModule.cs" />
     <Compile Include="DataRepository\BaseProvider\IRepository.cs" />
@@ -251,17 +254,19 @@
     <Compile Include="Resources\Messages.Designer.cs" />
     <Compile Include="Utility\Attributes\Check\MaxLengthExAttribute.cs" />
     <Compile Include="Models\LoginUser.cs" />
+    <Compile Include="Utility\DomainModels\CommonInfo.cs" />
     <Compile Include="Utility\EntityFramework\Query\IIncludableQueryable.cs" />
     <Compile Include="Utility\Enums\CompareType.cs" />
     <Compile Include="Utility\Extensions\Caching\Memory.cs" />
     <Compile Include="Utility\Extensions\DatabaseExtensions.cs" />
     <Compile Include="Utility\Extensions\DbSetExtensions.cs" />
+    <Compile Include="Utility\Extensions\FileExtensions.cs" />
     <Compile Include="Utility\Optimization\EntityFramework\DatabaseExtensions.cs" />
     <Compile Include="DataRepository\IRepositories\IUnitOfWork.cs" />
     <Compile Include="DataRepository\IRepositories\Unit\ISrtRepository.cs" />
     <Compile Include="Controllers\BaseVueController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\Reafs_TController.cs" />
+    <Compile Include="Controllers\Reafs_T\Reafs_TController.cs" />
     <Compile Include="Controllers\NotesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DataRepository\Utilities\ActionObserver.cs" />
@@ -278,7 +283,7 @@
     <Compile Include="Utility\CacheManager\IService\ICacheService.cs" />
     <Compile Include="Utility\CacheManager\Sevice\MemoryCacheService.cs" />
     <Compile Include="Utility\DomainModels\UserInfo.cs" />
-    <Compile Include="Utility\DomainModels\LoginInfo.cs" />
+    <Compile Include="Utility\DomainModels\ログイン情報.cs" />
     <Compile Include="Utility\Enums\DbCurrentType.cs" />
     <Compile Include="Utility\Enums\LinqExpressionType.cs" />
     <Compile Include="Utility\Enums\QueryOrderBy.cs" />
@@ -423,6 +428,8 @@
     <Content Include="Scripts\knockout.validation.min.js.map" />
     <Content Include="Views\Notes\_Notes.cshtml" />
     <Content Include="Views\Notes\Edit.cshtml" />
+    <Content Include="Views\Error\_Error.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
