--- a/Windows-MacOs/Windows-MacOs/Web.config
+++ b/Windows-MacOs/Windows-MacOs/Web.config
@@ -7,17 +7,17 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!--<section name="credentials" type="System.Configuration.NameValueSectionHandler, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />-->
+    <section name="credentials" type="System.Configuration.NameValueSectionHandler, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WinMacOs-20230527112352.mdf;Initial Catalog=aspnet-WinMacOs-20230527112352;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="WinMacDbContext" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
     <add name="J-Works" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
   </connectionStrings>
-    <!--<credentials>
-      <add key="userId" value="netadmin" />
-      <add key="password" value="net123aA@" />
-    </credentials>-->
+  <credentials>
+    <add key="userId" value="netadmin" />
+    <add key="password" value="net123aA@" />
+  </credentials>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
