--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -199,6 +199,7 @@
     <Compile Include="ActionFilter\Api\ExecuteTimeAttribute.cs" />
     <Compile Include="ActionFilter\JsonNetFilterAttribute.cs" />
     <Compile Include="ActionFilter\LargeJsonNetFilterAttribute.cs" />
+    <Compile Include="ActionFilter\LogActionAttribute.cs" />
     <Compile Include="ActionFilter\SkipExecuteTimeAttribute.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -248,16 +249,27 @@
     <Compile Include="DataRepository\Dapper\SqlDapper.cs" />
     <Compile Include="DataRepository\DBManager\DBServerProvider.cs" />
     <Compile Include="DataRepository\EFDbContext\WinMacDbContext.cs" />
+    <Compile Include="DataRepository\IRepositories\Unit\IF090Repository.cs" />
+    <Compile Include="DataRepository\IRepositories\Unit\IF093Repository.cs" />
+    <Compile Include="DataRepository\IRepositories\Unit\IS018Repository.cs" />
     <Compile Include="DataRepository\Repositories\UnitOfWorkRepository.cs" />
+    <Compile Include="DataRepository\Repositories\Unit\F090Repository.cs" />
+    <Compile Include="DataRepository\Repositories\Unit\F093Repository.cs" />
+    <Compile Include="DataRepository\Repositories\Unit\S018Repository.cs" />
     <Compile Include="DataRepository\Repositories\Unit\SrtRepository.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Resources\Messages.Designer.cs" />
     <Compile Include="Utility\Attributes\Check\MaxLengthExAttribute.cs" />
     <Compile Include="Models\LoginUser.cs" />
+    <Compile Include="Utility\Attributes\Common\Common.cs" />
     <Compile Include="Utility\DomainModels\CommonInfo.cs" />
+    <Compile Include="Utility\DomainModels\MenuInfo.cs" />
+    <Compile Include="Utility\DomainModels\ParamCommon.cs" />
     <Compile Include="Utility\EntityFramework\Query\IIncludableQueryable.cs" />
     <Compile Include="Utility\Enums\CompareType.cs" />
     <Compile Include="Utility\Extensions\Caching\Memory.cs" />
+    <Compile Include="Utility\Extensions\CommonExtensions.cs" />
     <Compile Include="Utility\Extensions\DatabaseExtensions.cs" />
     <Compile Include="Utility\Extensions\DbSetExtensions.cs" />
     <Compile Include="Utility\Extensions\FileExtensions.cs" />
@@ -293,12 +305,18 @@
     <Compile Include="Utility\Extensions\ObjectExtension.cs" />
     <Compile Include="Utility\Extensions\ServiceProviderManagerExtension.cs" />
     <Compile Include="Utility\Extensions\StringExtension.cs" />
+    <Compile Include="Utility\PInvoke\CommonModels\SysErrorCode.cs" />
+    <Compile Include="Utility\PInvoke\Mpr\Mpr.cs" />
     <Compile Include="Utility\SystemModels\BaseEntity.cs" />
     <Compile Include="Utility\DomainModels\SysInfo.cs" />
     <Compile Include="Utility\Security\Claims\PrincipalExtensions.cs" />
+    <Compile Include="Utility\SystemModels\FileDownloadEntity.cs" />
+    <Compile Include="Utility\TableModels\F090_ドキュメント管理ファイル.cs" />
+    <Compile Include="Utility\TableModels\F093_一時添付ファイル.cs" />
     <Compile Include="Utility\TableModels\F140_ログイン認証ファイル.cs" />
     <Compile Include="Utility\TableModels\M003_社員マスタ.cs" />
     <Compile Include="Utility\TableModels\M015_業者ユーザマスタ.cs" />
+    <Compile Include="Utility\TableModels\S018_ドキュメント定義.cs" />
     <Compile Include="Utility\TableModels\Srt.cs" />
     <Compile Include="Models\NoteModels - Copy.cs" />
     <Compile Include="Models\ResponseMsg.cs" />
