WinMacOs: update DI

--- a/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
+++ b/Windows-MacOs/Windows-MacOs/Windows_MacOs.csproj
@@ -236,15 +236,27 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Bootstrapper.cs" />
-    <Compile Include="Controllers\Reafs_R_WebController.cs" />
+    <Compile Include="Business\IServices\Reafs-R-Web\Common\ICommonService.cs" />
+    <Compile Include="Business\IServices\Reafs-R-Web\Common\Partial\ICommonService.cs" />
+    <Compile Include="Business\IServices\Reafs_W\Common\ICommonService.cs" />
+    <Compile Include="Business\IServices\Reafs_W\Common\Partial\ICommonService.cs" />
+    <Compile Include="Business\IServices\Reafs_T\Common\ICommonService.cs" />
+    <Compile Include="Business\IServices\Reafs_T\Common\Partial\ICommonService.cs" />
+    <Compile Include="Business\Services\Reafs_T\Common\CommonService.cs" />
+    <Compile Include="Business\Services\Reafs_T\Common\Partial\CommonService.cs" />
+    <Compile Include="Controllers\Reafs-R-Web\Partial\Reafs_R_WebController.cs" />
+    <Compile Include="Controllers\Reafs-R-Web\Reafs_R_WebController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\Reafs-W\Partial\Reafs_WController.cs" />
     <Compile Include="Controllers\Reafs_T\Common\CommonController.cs" />
     <Compile Include="Controllers\Reafs_T\Common\Partial\CommonController.cs" />
     <Compile Include="Controllers\Reafs_T\Partial\Reafs_TController.cs" />
-    <Compile Include="Controllers\Reafs_WController.cs" />
+    <Compile Include="Controllers\Reafs-W\Reafs_WController.cs" />
     <Compile Include="DataRepository\AutofacManager\AutofacContainerModule.cs" />
     <Compile Include="DataRepository\BaseProvider\IRepository.cs" />
+    <Compile Include="DataRepository\BaseProvider\IService.cs" />
     <Compile Include="DataRepository\BaseProvider\RepositoryBase.cs" />
+    <Compile Include="DataRepository\BaseProvider\ServiceBase.cs" />
     <Compile Include="DataRepository\Dapper\ISqlDapper.cs" />
     <Compile Include="DataRepository\Dapper\SqlDapper.cs" />
     <Compile Include="DataRepository\DBManager\DBServerProvider.cs" />
@@ -257,7 +269,6 @@
     <Compile Include="DataRepository\Repositories\Unit\F093Repository.cs" />
     <Compile Include="DataRepository\Repositories\Unit\S018Repository.cs" />
     <Compile Include="DataRepository\Repositories\Unit\SrtRepository.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Models\MenuModel.cs" />
     <Compile Include="Resources\Messages.Designer.cs" />
     <Compile Include="Utility\Attributes\Check\MaxLengthExAttribute.cs" />
