--- a/Windows-MacOs/Windows-MacOs/Web.config
+++ b/Windows-MacOs/Windows-MacOs/Web.config
@@ -7,13 +7,19 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="secret" type="System.Configuration.NameValueSectionHandler, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />    
     <section name="credentials" type="System.Configuration.NameValueSectionHandler, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WinMacOs-20230527112352.mdf;Initial Catalog=aspnet-WinMacOs-20230527112352;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="WinMacDbContext" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
+    <add name="WinMacDbContext" connectionString="Data Source=DION16;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
     <add name="J-Works" connectionString="Data Source=192.168.0.11;Initial Catalog=REAFS_R;Persist Security Info=True;User ID=sa;Password=net123aA@;Connection Timeout=500" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <secret>
+    <add key="JWT" value="reafswjwtninsyou" />
+    <add key="Audience" value="jwtAudience" />
+    <add key="Issuer" value="jwtIssuer" />
+  </secret>
   <credentials>
     <add key="userId" value="netadmin" />
     <add key="password" value="net123aA@" />
@@ -26,14 +32,15 @@
     <add key="FileUploadPath" value="~/Files/" />
     <add key="NotesPath" value="~/Notes/" />
     <add key="ShareName" value="\\10.251.38.28" />
+    <add key="TokenCount" value="5" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" maxRequestLength="52428800" />
-    <customErrors mode="On" defaultRedirect="~/Error/Index">
-        <error statusCode="404" redirect="~/Error/NotFound"/>
-    </customErrors>
+    <!--<customErrors mode="RemoteOnly" defaultRedirect="~/Error/Index">
+        <error statusCode="404" redirect="~/Error/NotFound" />
+    </customErrors>-->
   </system.web>
   <system.webServer>
     <modules>
@@ -45,18 +52,12 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-    <httpErrors errorMode="Custom" existingResponse="Replace" >
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" />
       <remove statusCode="500" />
-      <error
-        statusCode="404"
-        path="/Error/NotFound"
-        responseMode="ExecuteURL" />
-      <error
-        statusCode="500"
-        path="/Error/Index"
-        responseMode="ExecuteURL" />
-    </httpErrors>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/Error/Index" responseMode="ExecuteURL" />
+    </httpErrors>-->
     <staticContent>
       <mimeMap fileExtension=".apk" mimeType="application/octet-stream" />
     </staticContent>
@@ -112,9 +113,42 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Encodings.Web" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!--<contexts>
+      <context type="WinMacOs.DataRepository.EFDbContext, WinMacDbContext">
+        <databaseInitializer type="WinMacOs.DataRepository.EFDbContext, WinMacDbContext" />
+      </context>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
