--- a/Windows-MacOs/Vue/static/webconfig.json
+++ b/Windows-MacOs/Vue/static/webconfig.json
@@ -1,7 +1,7 @@
 {
     "baseURL_development":"http://localhost:3000/",
     "baseURL_debug":"http://localhost:3000/",
-    "baseURL_production":"http://localhost:3000/",
+    "baseURL_production":"https://localhost:44372/",
     "client_host":"localhost",
     "client_port":8888,
     "manual_W_path1":"\\10.57.62.178\\work\\マニュアル_OT\\W\\【Reafs】フェーズ2_Reafs-W_画面操作説明書Ver1.00.pdf",
