--- a/Windows-MacOs/Windows-MacOs/packages.config
+++ b/Windows-MacOs/Windows-MacOs/packages.config
@@ -22,7 +22,13 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyModel" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.0.3" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.0.3" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.0.3" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.0.3" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net48" />
@@ -38,6 +44,16 @@
   <package id="NLog" version="5.2.4" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="7.0.3" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Unity" version="2.1.505.0" targetFramework="net48" />
   <package id="Unity.Mvc3" version="1.2" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
